[gd_scene load_steps=12 format=3 uid="uid://b4p2ag0n4ui3x"]

[ext_resource type="Script" uid="uid://m5ev2frp3o1n" path="res://scripts/character_selection.gd" id="1_7xed0"]
[ext_resource type="PackedScene" uid="uid://cjkp6iup5bgc3" path="res://scenes/pg/cavaliere.tscn" id="2_wh1ae"]
[ext_resource type="PackedScene" uid="uid://cdh1w2mxhohds" path="res://scenes/pg/elfo.tscn" id="3_cqj7k"]
[ext_resource type="PackedScene" uid="uid://bmpeipw8r4nj7" path="res://scenes/pg/nano.tscn" id="4_cqj7k"]
[ext_resource type="Texture2D" uid="uid://flgyr6efghe2" path="res://assets/sprites/frames pg e utility/character/knight_m_idle_anim_f0.png" id="4_iixut"]
[ext_resource type="Texture2D" uid="uid://ded544xo5cem3" path="res://assets/sprites/frames pg e utility/character/elf_m_idle_anim_f0.png" id="5_dv8bk"]
[ext_resource type="PackedScene" uid="uid://bjaiw72yylptu" path="res://scenes/pg/lizard.tscn" id="5_v724p"]
[ext_resource type="PackedScene" uid="uid://bfh75dgljhtwx" path="res://scenes/pg/mago.tscn" id="6_7rsvw"]
[ext_resource type="Texture2D" uid="uid://l4mvjx0sr5t5" path="res://assets/sprites/frames pg e utility/character/dwarf_m_idle_anim_f0.png" id="7_iixut"]
[ext_resource type="Texture2D" uid="uid://bvsgl2fwpb4yf" path="res://assets/sprites/frames pg e utility/character/lizard_m_idle_anim_f0.png" id="8_iixut"]
[ext_resource type="Texture2D" uid="uid://bclwst5k6jahl" path="res://assets/sprites/frames pg e utility/character/wizzard_m_idle_anim_f0.png" id="10_v724p"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7xed0")
knight_scene = ExtResource("2_wh1ae")
elf_scene = ExtResource("3_cqj7k")
dwarf_scene = ExtResource("4_cqj7k")
lizard_scene = ExtResource("5_v724p")
mage_scene = ExtResource("6_7rsvw")

[node name="ImCavaliere" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 178.0
offset_top = 109.0
offset_right = 217.0
offset_bottom = 192.0
texture = ExtResource("4_iixut")
expand_mode = 1
stretch_mode = 5

[node name="ImElfo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 238.0
offset_top = 112.0
offset_right = 277.0
offset_bottom = 192.0
texture = ExtResource("5_dv8bk")
expand_mode = 1
stretch_mode = 5

[node name="ImNano" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 280.0
offset_top = 123.0
offset_right = 329.0
offset_bottom = 186.0
texture = ExtResource("7_iixut")
expand_mode = 1
stretch_mode = 5

[node name="ImLizard" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 337.0
offset_top = 124.0
offset_right = 386.0
offset_bottom = 187.0
texture = ExtResource("8_iixut")
expand_mode = 1
stretch_mode = 5

[node name="ImMago" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 393.0
offset_top = 122.0
offset_right = 442.0
offset_bottom = 185.0
texture = ExtResource("10_v724p")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 191.0
offset_right = 467.0
offset_bottom = 235.0

[node name="BtnCavaliere" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cavaliere"

[node name="BtnElfo" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Elfo"

[node name="BtnNano" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Nano"

[node name="BtnLizard" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Lizard"

[node name="BtnMago" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Mago"
